Fix: `InfoPopover` token icon alignment

--- a/src/modules/core/components/InfoPopover/InfoPopover.css
+++ b/src/modules/core/components/InfoPopover/InfoPopover.css
@@ -39,7 +39,7 @@
 }
 
 .displayName figure {
-  margin-right: 2px;
+  margin: 0 2px -2px 0;
   vertical-align: bottom;
 }
 
